--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "3.x",
     "lastfm": "0.9.x",
     "mpd": "1.x",
-    "optimist": "0.6.x"
+    "optimist": "0.6.x",
+    "socket.io": "0.9.x"
   }
 }
