--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lastfm": "0.9.x",
     "mpd": "1.x",
     "optimist": "0.6.x",
-    "socket.io": "0.9.x"
+    "socket.io": "0.9.x",
+    "underscore": "1.x"
   }
 }
