--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "errno": "0.0.5",
     "express": "3.x",
     "lastfm": "0.9.x",
     "mpd": "1.x",
