Add Bootstrap as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libs/mousetrap"]
 	path = libs/mousetrap
 	url = https://github.com/ccampbell/mousetrap.git
+[submodule "libs/bootstrap"]
+	path = libs/bootstrap
+	url = https://github.com/twbs/bootstrap.git
