--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libs/bootstrap"]
 	path = libs/bootstrap
 	url = https://github.com/twbs/bootstrap.git
+[submodule "libs/font-awesome"]
+	path = libs/font-awesome
+	url = https://github.com/FortAwesome/Font-Awesome.git
