--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "dependencies": {
     "jquery": "2.x",
-    "bootstrap": "3.0.0-rc.2",
+    "bootstrap": "3.x",
     "font-awesome": ">=3.2.1",
     "mousetrap": "1.x"
   }
